--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Check code formatting with Spotless
-        run: mvn spotless:check
+        run: ./gradlew spotlessCheck
 
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
